sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:10: error: Int does not take parameters
        nombreechanges(i,i+1)
                      ^